css/styles.css
body { 
    background: #20282e;
    font-family: 'Merriweather Sans', Sans-Serif;
}
h1 {
    Font-Family: 'Catamaran', Sans-Serif;
    font-weight: 800;
    font-size: 1.5em;
    z-index: 2500;
}

h2 {
    Font-Family: 'Arial', Sans-Serif;
    font-size: 1.1em;
    font-style: bold;
}

h3 {
    Font-Family: 'Merriweather Sans', Sans-Serif;
    font-size: .7em;
    font-style: italic;
    
}

h4 {
    Font-Family: 'Merriweather Sans', Sans-Serif;
    line-height: 1rem;
    font-size: 1.1em;
    font-weight: bold;
}

p {
    Font-Family: 'Arial', Sans-Serif;
    line-height: 1rem;
    font-size: .9em;
}

a {
    color:aquamarine;
}

.p2 {
    Font-Family: 'Merriweather Sans', Sans-Serif;
    font-size: .8em;
}

label {
        font-size: 1.2em;
        font-weight: 500;
        line-height: 60%;
    }

#map { 
    position: absolute; 
    top: 0; bottom: 0; 
    width: 100%; 
}

.leaflet-tooltip-left:before {
    right: 0;
    margin-right: -12px;
    border-left-color: rgba(0, 0, 0, 0.4);
}

.leaflet-tooltip-right:before {
    left: 0;
    margin-left: -12px;
    border-right-color: rgba(0, 0, 0, 0.4);
}

.leaflet-tooltip-own {
    position: absolute;
    padding: 5px;
    background-color: rgba(0, 0, 0, 0.4);
    border: 0px solid #000;
    color: #000;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    pointer-events: none;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
    word-wrap: normal;
    white-space: normal;
    max-width:300px;
    width: 250px;
}

.leaflet-tooltip img {
    max-width: 230px;
    max-height: 230px;
    padding: 7.5px;
}

#ui-controls {
    width: 176px;
    padding: 8px 25px 8px 15px;
    background: rgba(75, 75, 75, 0.8);
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
    border-radius: 5px;
    color: whitesmoke;
}

#ui-controls .min {
    float: left;
}

#ui-controls .max {
    float: right;
    margin-right: -15px;
}

#ui_group {
    width: 193px;
    padding: 8px 8px 8px 8px;
    background: #1B365D;
    opacity: .75;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
    border-radius: 5px;
    color: whitesmoke;
}

.year-slider {
    width: 100%;
}

/* The Modal (background) */
.modal {
    display: none;
    /* Hidden by default */
    position: fixed;
    /* Stay in place */
    z-index: 2000;
    /* Sit on top */
    padding-top: 50px;
    /* Location of the box */
    left: 0;
    top: 0;
    width: 100%;
    /* Full width */
    height: 100%;
    /* Full height */
    overflow: none;
    /* Enable scroll if needed */
    background-color: rgb(0, 0, 0);
    /* Fallback color */
    background-color: rgba(0, 0, 0, 0.9);
    /* Black w/ opacity */
}

/* Modal Content (image) */
.modal-content {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 80%;
    background-color: rgba(0, 0, 0, 0.0);
    /* Black w/ opacity */
}

/* Caption of Modal Image */
#caption {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
    text-align: left;
    color: #ccc;
    padding: 10px 0;
    height: 150px;
    z-index: 2200;
}

#image-compare {
    position: fixed;
    /* Stay in place */
    padding-top: 50px;
    /* Location of the box */
    left: 0;
    top: 0;
    width: 100%;
    /* Full width */
    height: 100%;
    /* Full height */
    overflow: none;
    /* Enable scroll if needed */
    z-index: 2000;
}

/* The Close Button */
.close {
    position: absolute;
    top: 15px;
    right: 35px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
    z-index: 2300;
}

.close:hover,
.close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
    aside {
        height: 80vh;
    }
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {}

/* 100% Image Width on Smaller Screens */
@media only screen and (max-width: 700px) {
    .modal-content {
    width: 100%;
    }
}

